<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.clojure</groupId>
  <artifactId>clojure</artifactId>
  <name>clojure</name>
  <packaging>jar</packaging>
  <version>1.13.0-master-SNAPSHOT</version>

  <url>http://clojure.org/</url>
  <description>Clojure core environment and runtime library.</description>

  <developers>
    <developer>
      <name>Rich Hickey</name>
      <email>richhickey@gmail.com</email>
      <timezone>-5</timezone>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>Eclipse Public License 1.0</name>
      <url>http://opensource.org/licenses/eclipse-1.0.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git@github.com:clojure/clojure.git</connection>
    <developerConnection>scm:git:git@github.com:clojure/clojure.git</developerConnection>
    <url>git@github.com:clojure/clojure.git</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <directlinking>true</directlinking>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.clojure</groupId>
      <artifactId>spec.alpha</artifactId>
       <version>0.5.238</version>
    </dependency>
    <dependency>
      <groupId>org.clojure</groupId>
      <artifactId>core.specs.alpha</artifactId>
      <version>0.4.74</version>
    </dependency>
    <dependency>
      <groupId>org.clojure</groupId>
      <artifactId>test.generative</artifactId>
      <version>1.1.0</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.clojure</groupId>
          <artifactId>clojure</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.clojure</groupId>
      <artifactId>test.check</artifactId>
      <version>1.1.1</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.clojure</groupId>
          <artifactId>clojure</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.clojure</groupId>
      <artifactId>tools.namespace</artifactId>
      <version>1.4.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax.xml.ws</groupId>
      <artifactId>jaxws-api</artifactId>
      <version>2.3.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.mikera</groupId>
      <artifactId>clojure-utils</artifactId>
      <version>0.8.0</version>
      <exclusions>
        <exclusion>
          <groupId>org.clojure</groupId>
          <artifactId>clojure</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.clojure</groupId>
      <artifactId>tools.analyzer.jvm</artifactId>
      <version>1.3.4</version>
    </dependency>
    <dependency>
      <groupId>org.graalvm.truffle</groupId>
      <artifactId>truffle-dsl-processor</artifactId>
      <version>25.0.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.graalvm.truffle</groupId>
      <artifactId>truffle-api</artifactId>
      <version>25.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.graalvm.truffle</groupId>
      <artifactId>truffle-runtime</artifactId>
      <version>25.0.2</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>1.7.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <distributionManagement>
    <repository>
      <id>central</id>
      <url>https://central.sonatype.com</url>
    </repository>
    <snapshotRepository>
      <id>central-snapshot</id>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <resources>
      <resource>
	<directory>src/resources</directory>
	<filtering>true</filtering>
      </resource>
      <resource>
	<directory>src/clj</directory>
      </resource>
    </resources>
    <testSourceDirectory>test/java</testSourceDirectory>
    <plugins>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-compiler-plugin</artifactId>
	<version>3.13.0</version>
	<configuration>
	  <source>17</source>
	  <target>17</target>
	  <encoding>UTF-8</encoding>
	  <annotationProcessorPaths>
	    <path>
	      <groupId>org.graalvm.truffle</groupId>
	      <artifactId>truffle-dsl-processor</artifactId>
	      <version>25.0.2</version>
	    </path>
	  </annotationProcessorPaths>
	</configuration>
      </plugin>
      <plugin>
	<artifactId>maven-antrun-plugin</artifactId>
	<version>3.1.0</version>
	<executions>
	  <execution>
	    <id>clojure-compile</id>
	    <phase>compile</phase>
	    <goals>
	      <goal>run</goal>
	    </goals>
	    <configuration>
	      <target>
                <property name="maven.compile.classpath" refid="maven.compile.classpath" />
		<ant target="compile-clojure" />
	      </target>
	    </configuration>
	  </execution>
	  <execution>
	    <id>clojure-test</id>
	    <phase>test</phase>
	    <goals>
	      <goal>run</goal>
	    </goals>
	    <configuration>
	      <target>
                <property name="maven.test.classpath" refid="maven.test.classpath" />
		<ant target="test" />
	      </target>
	    </configuration>
	  </execution>
	</executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <id>add-clojure-source-dirs</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
		<source>src/jvm</source>
		<source>src/main/java</source>
              </sources>
            </configuration>
          </execution>
          <execution>
            <id>add-cloffle-test-source</id>
            <phase>generate-test-sources</phase>
            <goals>
              <goal>add-test-source</goal>
            </goals>
            <configuration>
              <sources>
		<source>src/test/java</source>
              </sources>
            </configuration>
          </execution>
          <execution>
            <id>add-clojure-test-resources</id>
            <phase>generate-test-resources</phase>
            <goals>
              <goal>add-test-resource</goal>
            </goals>
            <configuration>
              <resources>
                <resource>
                  <directory>test</directory>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
	<artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.1</version>
	<executions>
	  <execution>
	    <id>clojure-slim-jar</id>
	    <phase>package</phase>
	    <goals>
	      <goal>single</goal>
	    </goals>
	    <configuration>
	      <descriptors>
		<descriptor>src/assembly/slim.xml</descriptor>
	      </descriptors>
	    </configuration>
	  </execution>
	</executions>
      </plugin>
      <plugin>
	<artifactId>maven-jar-plugin</artifactId>
	<version>3.4.1</version>
      </plugin>
      <plugin>
	<artifactId>maven-source-plugin</artifactId>
	<version>3.3.1</version>
	<executions>
	  <execution>
	    <id>attach-sources</id>
	    <phase>package</phase>
	    <goals>
	      <goal>jar</goal>
	    </goals>
            <configuration>
              <excludes>
                <exclude>clojure/version.properties</exclude>
              </excludes>
            </configuration>
	  </execution>
	</executions>
      </plugin>
      <plugin>
	<!-- do not push SCM changes to upstream repository;
	     prevents pushing tags/commits for failed releases;
	     instead, push SCM changes in Hudson configuration -->
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-release-plugin</artifactId>
	<version>3.0.1</version>
	<configuration>
	  <pushChanges>false</pushChanges>
	  <localCheckout>true</localCheckout>
	</configuration>
      </plugin>
      <!-- Cloffle Java tests: disable packaging default (phase=none), then run after antrun clojure-test -->
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-surefire-plugin</artifactId>
	<version>3.2.5</version>
	<executions>
	  <execution>
	    <id>default-test</id>
	    <phase>none</phase>
	  </execution>
	  <execution>
	    <id>cloffle-tests</id>
	    <phase>test</phase>
	    <goals>
	      <goal>test</goal>
	    </goals>
	    <configuration>
	      <testSourceDirectory>src/test/java</testSourceDirectory>
	      <argLine>-Xss4m --enable-native-access=ALL-UNNAMED</argLine>
	      <includes>
		<include>**/cloffle/**Test.java</include>
	      </includes>
	    </configuration>
	  </execution>
	</executions>
      </plugin>

      <plugin>
	<!-- create and attach javadoc jar -->
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-javadoc-plugin</artifactId>
	<version>3.11.2</version>
  <executions>
    <execution>
      <id>attach-javadocs</id>
      <goals>
        <goal>jar</goal>
      </goals>
    </execution>
  </executions>
	<configuration>
	  <doclint>none</doclint>
	</configuration>
      </plugin>

      <!-- deploy artifacts to central -->
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.7.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
          <autoPublish>true</autoPublish>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <profiles>
    <!-- Use "mvn -Ptest-direct" or "mvn -Ptest-no-direct" to choose testing with direct linking -->
    <profile>
      <id>test-direct</id>
      <properties>
        <directlinking>true</directlinking>
      </properties>
    </profile>
    <profile>
      <id>test-no-direct</id>
      <properties>
        <directlinking>false</directlinking>
      </properties>
    </profile>
    <profile>
      <!-- "mvn -Pdistribution package" builds a .zip file -->
      <id>distribution</id>
      <build>
	<plugins>
	  <plugin>
	    <artifactId>maven-assembly-plugin</artifactId>
	    <version>3.7.1</version>
	    <executions>
	      <execution>
		<id>clojure-distribution</id>
		<phase>package</phase>
		<goals>
		  <goal>single</goal>
		</goals>
		<configuration>
		  <appendAssemblyId>false</appendAssemblyId>
		  <descriptors>
		    <descriptor>src/assembly/distribution.xml</descriptor>
		  </descriptors>
		</configuration>
	      </execution>
	    </executions>
	  </plugin>
	</plugins>
      </build>
    </profile>
    <profile>
      <!-- sign artifacts for deployment -->
      <id>sign</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.4</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>repl</id>
      <properties>
        <cloffle.args/>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.1.0</version>
            <configuration>
              <executable>java</executable>
              <classpathScope>test</classpathScope>
              <arguments>
                <argument>-Xss4m</argument>
                <argument>--enable-native-access=ALL-UNNAMED</argument>
                <argument>-Dclojure.test-clojure.exclude-namespaces=#{clojure.test-clojure.compilation.load-ns clojure.test-clojure.compilation clojure.test-clojure.ns-libs-load-later clojure.test-clojure.genclass clojure.test-clojure.annotations}</argument>
                <argument>-classpath</argument>
                <classpath/>
                <argument>net.javacrumbs.cloffle.CloffleREPL</argument>
                <argument>${cloffle.args}</argument>
              </arguments>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>local</id>
      <dependencies>
        <dependency>
          <groupId>org.clojure</groupId>
          <artifactId>test.check</artifactId>
          <version>1.1.1</version>
          <exclusions>
            <exclusion>
              <groupId>org.clojure</groupId>
              <artifactId>clojure</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.5.3</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>shade</goal>
                </goals>
                <configuration>
                  <transformers>
                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                      <mainClass>clojure.main</mainClass>
                    </transformer>
                  </transformers>
		  <outputFile>clojure.jar</outputFile>
		</configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <repositories>
    <repository>
      <id>clojars.org</id>
      <url>https://repo.clojars.org</url>
    </repository>
  </repositories>
</project>
